# opencv-build

./: .gitignore  README.md  build-android.sh  build-static-win64.bat  build-static_lib.sh  build-wasm-static_lib.sh  build-windows.bat  setup_ndk.sh
.github/workflows/: build.yml
static_lib/: CMakeLists.txt  bundle_static_library.cmake
